# cartoonify

./: .gitignore  README.md  app.py  pyproject.toml
conf/: train_config.yaml  train_lora_config.yaml
demo/: app.py
examples/: diffusion_metadata.csv
src/cartoonify/: utils.py
src/cartoonify/data/: dataset.py
src/cartoonify/training/: logging.py  train_dreambooth.py  utils.py
tools/: data_prep.py  data_prep.sh  experiment.py  preprocess_images.py  push_model.py  push_model.sh  rename_images.py  save_dataset.py  save_dataset.sh  train.py  train_dreambooth.py  train_dreambooth.sh  train_lora.py
